Fixes Archive Search Placeholders and Spacing Between Articles on Mobile

--- a/assets/post/blocks/sidebar.css
+++ b/assets/post/blocks/sidebar.css
@@ -79,6 +79,10 @@
                 padding: $padding-double 0 0 0;
             }
 
+            &:last-child {
+                margin: $padding 0 $padding-double 0;
+            }
+
         }
 
     }
